objects/WorkType.object
<CustomObject>
    <fields>
        <fullName>ASI_Work_Type__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Work Type that is in the ASI Work Type Group</description>
        <label>ASI Work Type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allow_for_Revolving_Appointments__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow for Revolving Appointments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Due_Date_Offset__c</fullName>
        <description>Minutes</description>
        <inlineHelpText>Calculates the Due Date by adding Minutes to the Service creation time, reflecting the organisation&apos;s internal SLA</inlineHelpText>
        <label>Due Date Offset</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__Exact_Appointments__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exact Appointments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Respects_Number_of_Vehicles__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Respects Number of Vehicles</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Should_Appear_in_Legacy_Queue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Should Appear in Legacy Queue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VIN_Required__c</fullName>
        <defaultValue>true</defaultValue>
        <label>VIN Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Work_Type_Color__c</fullName>
        <defaultValue>&quot;#FFA500&quot;</defaultValue>
        <description>Work Type Color stored as Hex #</description>
        <label>Work Type Color</label>
        <length>7</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Type_Unique_ID__c</fullName>
        <externalId>true</externalId>
        <label>Work Type Unique ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <listViews>
        <fullName>All_WorkTypes</fullName>
        <columns>Name</columns>
        <columns>Work_Type_Unique_ID__c</columns>
        <columns>EstimatedDuration</columns>
        <columns>DurationType</columns>
        <columns>ASI_Work_Type__c</columns>
        <columns>VIN_Required__c</columns>
        <columns>Respects_Number_of_Vehicles__c</columns>
        <columns>Allow_for_Revolving_Appointments__c</columns>
        <columns>Work_Type_Color__c</columns>
        <columns>Id</columns>
        <filterScope>Everything</filterScope>
        <label>All Work Types</label>
    </listViews>
    <listViews>
        <fullName>My_WorkTypes</fullName>
        <filterScope>Mine</filterScope>
        <label>My Work Types</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>